# APEX-KV

./: CMakeLists.txt  Dockerfile  README.md  dev-run.sh  docker-compose.yml  release.sh
.github/workflows/: ci.yml
clients/go/: apex_kv.go
clients/js/: apex_kv.js
clients/python/: apex_kv.py
clients/rust/: apex_kv.rs
docs/: api.md  architecture.md
include/apex/: allocator.hpp  apex.hpp  common.hpp  gossip.hpp  node.hpp  protocol.hpp  queue.hpp  raft.hpp  ring.hpp  store.hpp  thread_pool.hpp  wal.hpp
scripts/: bench-graph.py  integration-test.sh  prometheus.yml
src/: bench.cpp  client.cpp  main.cpp  tests.cpp
ui/: index.html
